--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-12 col-lg-6 col-sm-6">
-		<a href="/">{{ site.name }}</a>
+		<h1>{{ site.name }}</h1>
 	</div>
 	<div class="col-12 col-lg-6 col-sm-6">
 		<ul class="nav nav-pills pull-right">
