--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
 	<div class="col-12 col-lg-6 col-sm-6">
 		<ul class="nav nav-pills pull-right">
 			<li><a href="/">Home</a></li>
-			<li><a href="/news">News</a></li>
+			<!--<li><a href="/news">News</a></li>-->
 			<li><a href="/mods">Mods</a></li>
 		</ul>
 	</div>
